fixed spacing issue in images on splash page

--- a/app/assets/stylesheets/greeting_form.css
+++ b/app/assets/stylesheets/greeting_form.css
@@ -174,6 +174,7 @@
   height: 645px;
   width: 50%;
   float: right;
+  
 }
 
 .greeting-body-title {
@@ -182,10 +183,12 @@
   font-family: 'Montserrat', sans-serif;
   font-size: 24px;
   font-weight: 600;
-  margin-top: 50px;
-  
-  
+  margin-top: 50px; 
 }
+
+
+
+
 
 .greeting-body-img-top-left {
   background-image:  url('./images/top-left-image.png');
@@ -195,6 +198,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 10%;
+  bottom: 0;
   
   height: 543px;
   width: 324px;
@@ -203,11 +207,14 @@
 .greeting-body-img-top-right {
   background-image:  url('./images/top-right-image.png');
   background-size: contain;
+  background-repeat: no-repeat;
   z-index: 1;
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-top: 10%;
+  bottom: 0;
+
   
   height: 543px;
   width: 324px;
@@ -236,6 +243,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 10%;
+  bottom: 0;
   
   height: 543px;
   width: 324px;
@@ -245,13 +253,19 @@
 .greeting-body-img-bottom {
   background-image:  url('./images/image-bottom.png');
   background-size: contain;
+  background-repeat: no-repeat;
   z-index: 1;
   display: block;
-  margin-left: auto;
+  margin-left: 64%;
   margin-right: 13.6%;
-  margin-top: 8.6%;
-  height: 486px;
-  width: 325px;
+  margin-top: 10%;
+  margin-bottom: 1%;
+  overflow: hidden;
+  height: 543px;
+  width: 324px;
+  position: absolute;
+  float: right;
+
 
 }
 
@@ -272,51 +286,106 @@
   background-image:  url('./images/Greeting_background.png');
   background-size: cover;
   background-color: #8656cd;
-  height: 639px;
+  height: 659px;
   width: 100%;
   float: left;
+  position: relative;
+  
 
 }
 
 .greeting-bottom-list-container {
-  display: block;
-  height: 100%;
+  display: 
+  height: 1000px
   width: 100%;
 }
 
 .greeting-bottom-list-container ul{
   display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+
 
 }
 
+.greeting-bottom-title {
+  font-size: 40px;
+  margin-left: 30%;
+
+}
+
+.greeting-bottom-main-section {
+  display: flex;
+  justify-content: space-between;
 
 
+}
 
 
 .greeting-bottom-list-left {
-  list-style-image: url('./images/house_icon.png');
-  margin-left: 10%;
-  
+  font-size: 20px;
+  margin-right: 4px;
+  line-height: 50px;
+}
 
-
-
+.greeting-bottom-list-left li:before {
+  content: '';
+  background-image: url('./images/house_icon.png');
+  background-size: cover;
+  resize: both;
+  height: 19px;
+  width: 20px;
+  vertical-align: middle;
+  display: inline-block;
+  margin-top: -3px;
+  margin-right: 4px;
 
 }
+
 
 .greeting-bottom-list-center {
-  list-style-image: url('./images/house_icon.png');
-  margin-left: 20%;
-  
+  font-size: 20px;
+  margin-right: 4px;
+  line-height: 50px; 
+}
+
+.greeting-bottom-list-center li:before {
+  content: '';
+  background-image: url('./images/house_icon.png');
+  background-size: cover;
+  resize: both;
+  height: 19px;
+  width: 20px;
+  vertical-align: middle;
+  display: inline-block;
+  margin-top: -3px;
+  margin-right: 4px;
 
 
 }
 
-.greeting-bottom-list-right {
-  list-style-image: url('./images/diamond_icon.png');
-  margin-left: 20%;
 
-
+.greeting-bottom-list-right  {
+  font-size: 20px;
+  margin-right: 4px;
+  line-height: 50px;
 }
+
+.greeting-bottom-list-right li:before  {
+  content: '';
+  background-image: url('./images/diamond_icon.png');
+  background-size: cover;
+  resize: both;
+  height: 19px;
+  width: 20px;
+  vertical-align: middle;
+  display: inline-block;
+  margin-top: -3px;
+  margin-right: 4px;
+}
+
+
+
 
 
 .footer-background {
